...
    <string name="filter_sort_label">ORDENAR POR</string>
    <string name="filter_apply_button">Aplicar Filtros</string>
    <string name="filter_any_condition">Cualquiera</string>

    <string-array name="filter_sport_options">
        <item>Todos</item>
        <item>Baloncesto</item>
        <item>Tenis</item>
        <item>Running</item>
        <item>Rugby</item>
        <item>Fútbol</item>
        <item>Béisbol</item>
        <item>Otro</item>
    </string-array>

    <string-array name="filter_condition_options">
        <item>Nuevo</item>
        <item>Buen estado</item>
        <item>Malas condiciones</item>
    </string-array>

    <string-array name="filter_sort_options">
        <item>Predeterminado</item>
...
